checkout,add-card

--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -15,9 +15,9 @@
   }
 
 }
-.product-card:hover{
-  transform: scale(0.9)
-}
+// .product-card:hover{
+//   transform: scale(0.9)
+// }
 .product-card:hover .card-body{
   opacity: 5;
 }
