--- a/src/app/pages/all-books/all-books.page.html
+++ b/src/app/pages/all-books/all-books.page.html
@@ -1,6 +1,6 @@
 <!-- top Navigation bar-->
 <ion-header class="home-header ion-no-border">
-  <app-topbar></app-topbar>
+  <!-- <app-topbar></app-topbar> -->
 </ion-header>
 
 
