--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -425,11 +425,11 @@ img {
                         </div>
 
                       </ion-row>
-                      <div>
+                      <!-- <div>
                         <ion-button color="tertiary"
                         shape="round" routerLink="/cart">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Go to
                           Cart&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</ion-button>
-                      </div>
+                      </div> -->
                     </ion-toolbar>
                   </ion-card-content>
                 </ion-card>
