--- a/src/app/pages/address/address.component.html
+++ b/src/app/pages/address/address.component.html
@@ -1,3 +1,75 @@
-<p>
-  address works!
-</p>
+  <ion-grid class="ion-padding">
+    <form>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="12">
+          <ion-label class="fs-14" color="dark">Card Number</ion-label>
+          <ion-item class="form-control" lines="none">
+            <ion-input type="text" inputmode="numeric" minlength="16" maxlength="16" autofocus="true" type="text"
+             ></ion-input>
+          </ion-item>
+          <ion-text color="danger" 
+            class="help-block">
+            <small class="error-msg" ></small>
+          </ion-text>
+        </ion-col>
+  
+        <ion-col size="4">
+          <ion-label class="fs-14" color="dark">Month</ion-label>
+          <ion-item class="form-control" lines="none">
+            <ion-select class="w-100" formControlName="expiryMonth" placeholder="mm" interface="alert">
+              <ion-select-option value="01">January</ion-select-option>
+              <ion-select-option value="02">February</ion-select-option>
+              <ion-select-option value="03">March</ion-select-option>
+              <ion-select-option value="04">April</ion-select-option>
+              <ion-select-option value="05">May</ion-select-option>
+              <ion-select-option value="06">June</ion-select-option>
+              <ion-select-option value="07">July</ion-select-option>
+              <ion-select-option value="08">August</ion-select-option>
+              <ion-select-option value="09">September</ion-select-option>
+              <ion-select-option value="10">October</ion-select-option>
+              <ion-select-option value="11">November</ion-select-option>
+              <ion-select-option value="12">December</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-text color="danger"
+            
+            class="help-block">
+            <small class="error-msg">Required</small>
+          </ion-text>
+        </ion-col>
+  
+        <ion-col size="4">
+          <ion-label class="fs-14" color="dark">Year</ion-label>
+          <ion-item class="form-control" lines="none">
+            <ion-select class="w-100" formControlName="expiryYear" placeholder="YYYY" interface="alert">
+              <ion-select-option ></ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-text color="danger"
+            
+            class="help-block">
+            <small class="error-msg" >Required</small>
+          </ion-text>
+        </ion-col>
+  
+        <ion-col size="4">
+          <ion-label class="fs-14" color="dark">CVV</ion-label>
+          <ion-item class="form-control" lines="none">
+            <ion-input minlength="3" maxlength="3" autofocus="true" inputmode="email" type="text" inputmode="numeric">
+            </ion-input>
+          </ion-item>
+          <ion-text color="danger"
+          class="help-block">
+            <small class="error-msg"></small>
+          </ion-text>
+        </ion-col>
+  
+        <ion-col size="6">
+          <ion-button type="button" expand="block" fill="outline" color="primary">Cancel</ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button type="submit" expand="block" fill="solid" color="primary">Save</ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
+  </ion-grid>
