--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -200,7 +200,9 @@ img {
                       <small><b>See all formats and editions</b></small>
                     </div>
                     <ion-button color="danger" fill="outline">
-                      <h1>₹ 1499</h1>
+                      <!-- <h1>₹ 1499</h1> -->
+                      <span  style="font-size:large;">&#8377;</span><b style="font-size: x-large;">{{book.cost}}</b><span style="font-size: large;">.00</span>
+
                     </ion-button>
                     <br />
                     <br />
