--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -41,21 +41,36 @@
       </ion-list>
   </div>
   
-
+<!-- 
   <ion-grid [fixed]="true">
     <ion-row>
       <ion-col>
             <h3>ORDER PLACED</h3>
             <h3>TOTAL</h3>
             <h3>SHIP TO</h3>
-      <ion-col>
-        <h3>ORDER PLACED</h3>
-
-      </ion-col>
+            <h3>ORDER PLACED</h3>
+      
     </ion-col>
        
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
+
+  <ion-card class="content">
+   
+
+    <ion-card-header>
+      <ion-col>
+      <ion-card-title>
+        My Card Title
+      </ion-card-title>
+    </ion-col>
+    </ion-card-header>
+  
+  
+    <!-- <ion-card-content>
+      This is some content for my card. It can be anything you want to display in your app.
+    </ion-card-content> -->
+  </ion-card>
   
   
   
