--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -57,3 +57,9 @@ ion-col {
     display: flex;
     align-items: start;
 }
+.content{
+    width: 60%;
+    left: 15%;
+    margin-top: -1%;
+    background-color: gainsboro;
+}
