--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -12,26 +12,22 @@
   </div>
 
   <b class="pt-2" text="wrap_text">{{data.bookname}}</b>
+  <small class="pt-1">{{data.authorName}}</small>
 
-  <div class="d-flex">
+
+  <div class="d-flex">{{data.userRating}}
     <ion-icon color="warning" name="star"></ion-icon>
     <ion-icon color="warning" name="star"></ion-icon>
     <ion-icon color="warning" name="star"></ion-icon>
     <ion-icon color="warning" name="star-half-outline"></ion-icon>
     <ion-icon color="warning" name="star-outline"></ion-icon>
   </div>
-  <h3>₹ 499</h3>
- <div>
-  <small><ion-button shape="rectangle" size="small" color="danger" > 40% Off </ion-button></small>
-    <small colour="danger"><b>Deal</b></small>
-  </div>
-  MRP <s>2,999</s>
-  <!-- <ion-fab vertical="center" horizontal="end" slot="fixed" color="darken">
-    <ion-fab-button>
-      <ion-icon name="add" color="darken"></ion-icon>
-    </ion-fab-button>
-  </ion-fab> -->
 
-  <small class="pt-1">{{data.authorName}}</small>
+  
+ <div>
+  <small style="font-size: large;"><span class="rupee-symbol" style="font-size:large;">&#8722; 40%</span></small>&nbsp;
+  <span  style="font-size:large;">&#8377;</span><b style="font-size: x-large;">{{data.cost}}</b><span style="font-size: large;">.00</span>
+  <h6><b>Deal</b> MRP <s class="expectedMoney"> {{data.expectedMoney}}.00</s></h6>
+ </div>
 </a>
 
