--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -26,8 +26,8 @@
   
  <div>
   <small style="font-size: large;"><span class="rupee-symbol" style="font-size:large;">&#8722; 40%</span></small>&nbsp;
-  <span  style="font-size:large;">&#8377;</span><b style="font-size: x-large;">{{data.cost}}</b><span style="font-size: large;">.00</span>
-  <h6><b>Deal</b> MRP <s class="expectedMoney"> {{data.expectedMoney}}.00</s></h6>
+  <span  style="font-size:x-large;color: green;">&#8377;</span><b style="font-size: x-large;color: green;">{{data.cost}}</b><span style="font-size: large;color: green">.00</span>
+  <h6><b>Deal</b> MRP <s class="expectedMoney">{{data.expectedMoney}}.00</s></h6>
  </div>
 </a>
 
