--- a/src/app/pages/address/address.component.html
+++ b/src/app/pages/address/address.component.html
@@ -1,75 +1,98 @@
-  <ion-grid class="ion-padding">
-    <form>
-      <ion-row class="ion-justify-content-center">
-        <ion-col size="12">
-          <ion-label class="fs-14" color="dark">Card Number</ion-label>
-          <ion-item class="form-control" lines="none">
-            <ion-input type="text" inputmode="numeric" minlength="16" maxlength="16" autofocus="true" type="text"
-             ></ion-input>
-          </ion-item>
-          <ion-text color="danger" 
-            class="help-block">
-            <small class="error-msg" ></small>
-          </ion-text>
-        </ion-col>
-  
-        <ion-col size="4">
-          <ion-label class="fs-14" color="dark">Month</ion-label>
-          <ion-item class="form-control" lines="none">
-            <ion-select class="w-100" formControlName="expiryMonth" placeholder="mm" interface="alert">
-              <ion-select-option value="01">January</ion-select-option>
-              <ion-select-option value="02">February</ion-select-option>
-              <ion-select-option value="03">March</ion-select-option>
-              <ion-select-option value="04">April</ion-select-option>
-              <ion-select-option value="05">May</ion-select-option>
-              <ion-select-option value="06">June</ion-select-option>
-              <ion-select-option value="07">July</ion-select-option>
-              <ion-select-option value="08">August</ion-select-option>
-              <ion-select-option value="09">September</ion-select-option>
-              <ion-select-option value="10">October</ion-select-option>
-              <ion-select-option value="11">November</ion-select-option>
-              <ion-select-option value="12">December</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-text color="danger"
-            
-            class="help-block">
-            <small class="error-msg">Required</small>
-          </ion-text>
-        </ion-col>
-  
-        <ion-col size="4">
-          <ion-label class="fs-14" color="dark">Year</ion-label>
-          <ion-item class="form-control" lines="none">
-            <ion-select class="w-100" formControlName="expiryYear" placeholder="YYYY" interface="alert">
-              <ion-select-option ></ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-text color="danger"
-            
-            class="help-block">
-            <small class="error-msg" >Required</small>
-          </ion-text>
-        </ion-col>
-  
-        <ion-col size="4">
-          <ion-label class="fs-14" color="dark">CVV</ion-label>
-          <ion-item class="form-control" lines="none">
-            <ion-input minlength="3" maxlength="3" autofocus="true" inputmode="email" type="text" inputmode="numeric">
-            </ion-input>
-          </ion-item>
-          <ion-text color="danger"
-          class="help-block">
-            <small class="error-msg"></small>
-          </ion-text>
-        </ion-col>
-  
-        <ion-col size="6">
-          <ion-button type="button" expand="block" fill="outline" color="primary">Cancel</ion-button>
-        </ion-col>
-        <ion-col size="6">
-          <ion-button type="submit" expand="block" fill="solid" color="primary">Save</ion-button>
-        </ion-col>
-      </ion-row>
-    </form>
-  </ion-grid>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Delivery Address</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <form [formGroup]="newAddressForm" (ngSubmit)="onSubmit()">
+        <ion-item>
+          <ion-label position="stacked">First Name</ion-label>
+          <ion-input formControlName="firstName"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Last Name</ion-label>
+          <ion-input formControlName="lastName"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Middle Name</ion-label>
+          <ion-input formControlName="middleName"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Phone Number</ion-label>
+          <ion-input formControlName="mobile"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Email</ion-label>
+          <ion-input formControlName="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Address Line 1</ion-label>
+          <ion-input formControlName="address1"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Address Line 2</ion-label>
+          <ion-input formControlName="address2"></ion-input>
+        </ion-item>
+
+        <!-- <ion-item>
+          <ion-label position="stacked">AddressId</ion-label>
+          <ion-input formControlName="addressId"></ion-input>
+        </ion-item> -->
+
+        <ion-item>
+          <ion-label position="stacked">addressType</ion-label>
+          <ion-input formControlName="addressType"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Area</ion-label>
+        <ion-input formControlName="area"></ion-input>
+        </ion-item>
+
+
+        <ion-item>
+          <ion-label position="stacked">Country</ion-label>
+          <ion-input formControlName="country"></ion-input>
+        </ion-item>
+
+       
+
+        <ion-item>
+          <ion-label position="stacked">State</ion-label>
+          <ion-input formControlName="state"></ion-input>
+        </ion-item>
+        
+        <!-- <ion-item>
+          <ion-label position="stacked">userId</ion-label>
+          <ion-input formControlName="userId"></ion-input>
+        </ion-item> -->
+
+        <!-- <ion-item>
+          <ion-label position="stacked">status</ion-label>
+          <ion-input formControlName="status"></ion-input>
+        </ion-item> -->
+
+        <ion-item>
+          <ion-label position="stacked">Zip Code</ion-label>
+          <ion-input formControlName="zipCode"></ion-input>
+        </ion-item>
+        
+
+        <div class="alert alert-danger" *ngIf="newAddressForm.invalid">
+          Error in address data, please try to fill carefully.
+        </div>
+
+        <ion-button color="primary" type="submit" expand="full">
+          {{ isEditMode ? 'Save Changes' : 'Add New Address' }}
+        </ion-button>
+      </form>
+    </ion-card-content>
+  </ion-card>
+</ion-content>
