--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -104,14 +104,14 @@ background-size:contain;
         </div>
       </ion-col>
     </ion-row>
-    <!-- <ion-row size ="20">
+    <ion-row size ="20">
       <swiper #bookSwiper [config]="config">
         <ng-template swiperSlide *ngFor="let book of latest; index as i">
           <app-product-card [data]="book"></app-product-card>
           <ion-col size="2" *ngFor="let book of latest"></ion-col>
       </ng-template>
       </swiper>
-    </ion-row> -->
+    </ion-row>
   </ion-grid>
 </ion-item-group>
 
