--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -2,8 +2,8 @@
   <app-topbar></app-topbar>
     <div class="container">
       <ion-breadcrumbs>
-        <ion-breadcrumb href="#">Your Account</ion-breadcrumb>
-        <ion-breadcrumb href="#"> Your Orders</ion-breadcrumb>
+        <ion-breadcrumb routerLink="/account" >Your Account</ion-breadcrumb>
+        <ion-breadcrumb routerLink="/order"> Your Orders</ion-breadcrumb>
         
       </ion-breadcrumbs>
     </div>  
@@ -16,13 +16,13 @@
   </div>
 
   <div class="a-row a-spacing-medium custom-view-options">
-    <ul class="a-unordered-list a-nostyle a-horizontal" role="tablist">
+    <ul style="cursor: pointer;" class="a-unordered-list a-nostyle a-horizontal" role="tablist">
         <li role="tab"><span class="a-list-item"></span></li>
         <li class="selected" role="tab"><span class="a-list-item">
         <span class="item"> Orders</span></span></li>
-        <li role="tab"><span class="a-list-item"> Buy Again</span></li>
+        <li role="tab"><span class="a-list-item" routerLink="/buy-again"> Buy Again</span></li>
         <li role="tab"><span class="a-list-item">Not Yet Shipped</span></li>
-        <li role="tab"><span class="a-list-item">Cancelled Orders</span></li>
+        <li role="tab"><span class="a-list-item" routerLink="/cancelled-orders">Cancelled Orders</span></li>
     </ul>
   </div>
   
@@ -114,5 +114,7 @@
   </ion-col>
 </ion-row>
 </ion-card-content>
+<app-footer></app-footer>
 
-    
+
+</ion-content>
