--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -44,7 +44,10 @@
 
 
     <ion-col size="5" class="my-auto ion-text-end list">
-      <app-login></app-login>
+      <!-- <app-login></app-login> -->
+      <!-- <app-auth></app-auth> -->
+      <ion-button fill="clear" routerLink="/auth" color="dark">login</ion-button>
+
       <ion-button fill="clear" id="popover-button" color="dark"
         >Vinoth</ion-button
       >
