--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -54,7 +54,7 @@
               <ion-col class="signup-link ion-no-padding ion-no-margin" size="13">
                 <p class="fs-12" class="primary">
                   Not registered yet?
-                  <ion-text color="success" routerLink="/auth/signup" class="pointer">
+                  <ion-text color="success" routerLink="/login" class="pointer">
                     Create an Account
                   </ion-text>
                 </p>
