--- a/src/app/pages/order/order-details/order-details.component.html
+++ b/src/app/pages/order/order-details/order-details.component.html
@@ -83,7 +83,7 @@
             <button>Buy it again</button>
           </div><br>
           <div class="btns mt-5">
-            <button>Track pakage</button><hr>
+            <button routerLink="/track-package">Track pakage</button><hr>
             <button>Archive Order</button>
           </div>
         </div>
