--- a/src/app/pages/order/track-package/track-package.component.html
+++ b/src/app/pages/order/track-package/track-package.component.html
@@ -29,7 +29,7 @@
      <div class="container card">
       <ion-card>
         <ion-card-header>
-         <h4>Delivery by Amazon</h4>
+         <h4>Delivery by VRNA</h4>
         </ion-card-header>
       
         <ion-card-content>
