--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -15,7 +15,7 @@
             
               <ion-row class="h-100">
                 <ion-col size="12">
-                  <ion-img class="auth-logo-img" src="assets/images/logo.png"></ion-img>
+                  <ion-img class="auth-logo-img" src="assets/img/logo.png"></ion-img>
                 </ion-col>
                 <ion-col size="12">
                   <router-outlet></router-outlet>
